--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "next": "latest",
+    "@types/contentful-resolve-response": "^0.1.31",
+    "axios": "^1.4.0",
+    "contentful": "^10.3.6",
+    "contentful-resolve-response": "^1.7.0",
+    "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
@@ -16,7 +21,11 @@
     "@types/node": "18.7.14",
     "@types/react": "^18.0.18",
     "@types/styled-components": "5.1.26",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "babel-plugin-styled-components": "^2.0.7",
-    "typescript": "4.8.2"
+    "eslint": "^8.46.0",
+    "eslint-plugin-react": "^7.33.0",
+    "typescript": "^4.8.2"
   }
 }
